--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "prop-types": "^15.7.2",
     "rc-slider": "^8.6.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -14,6 +16,7 @@
     "reactotron-redux-saga": "^4.2.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
+    "seamless-immutable": "^7.1.4",
     "styled-components": "^4.2.0"
   },
   "scripts": {
